# pc-control-bot

./: .env.example  .gitignore  Cargo.toml  README.md  README_EN.md  RELEASE_NOTES.md  build.rs  install.sh  setup.sh
src/: auth.rs  commands.rs  handlers.rs  i18n.rs  main.rs  ui.rs
src/services/: apps.rs  audio.rs  bluetooth.rs  camera.rs  devices.rs  display.rs  mod.rs  system.rs
src/utils/: screenshot.cpp  screenshot.pri  screenshot_tool
