[package]
name = "pc_control_bot"
version = "1.0.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
chrono = "0.4"
dptree = "0.3"
once_cell = "1"

[profile.release]
strip = true
lto = true
